--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "ioredis": "^5.4.1",
     "lucide-react": "^0.453.0",
     "next": "15.0.0",
+    "next-auth": "^4.24.10",
     "react": "19.0.0-rc-65a56d0e-20241020",
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
     "react-markdown": "^9.0.1",
+    "rehype-react": "^8.0.0",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.5.4",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
