--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.9.0",
     "@types/cheerio": "^0.22.35",
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
@@ -18,13 +22,16 @@
     "fs": "^0.0.1-security",
     "ioredis": "^5.4.1",
     "lucide-react": "^0.453.0",
+    "mongoose": "^8.7.3",
     "next": "15.0.0",
     "next-auth": "^4.24.10",
-    "react": "19.0.0-rc-65a56d0e-20241020",
-    "react-dom": "19.0.0-rc-65a56d0e-20241020",
+    "razorpay": "^2.9.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "rehype-react": "^8.0.0",
     "remark-gfm": "^4.0.0",
+    "stripe": "^17.2.1",
     "tailwind-merge": "^2.5.4",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7"
